--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "gh-pages": "^3.2.3",
-    "handlebars": "^4.7.7"
+    "handlebars": "^4.7.7",
+    "pnotify": "^5.2.0"
   }
 }
